--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "ionic-team/ionic-bower#1.3.4"
+  },
+  "dependencies": {
+    "angular-pdf-viewer": "^0.2.13"
   }
 }
